--- a/test/web_page.html
+++ b/test/web_page.html
@@ -122,7 +122,7 @@
 
     window.onload = function () {
       let xhr = new XMLHttpRequest();
-      xhr.open("GET", "/getRelayStates", true);
+      xhr.open("GET", "/getOutputStates", true);
       xhr.onload = function () {
         if (xhr.status == 200) {
           let relayStates = JSON.parse(xhr.responseText);
