--- a/test/web_page.html
+++ b/test/web_page.html
@@ -116,47 +116,99 @@
     <button onclick="updateEndRPM()">Update End RPM</button>
   </div>
   <div class="flex-container">
-    <h4>Enter Values:</h4>
-    <input type="text" id="key_3000" placeholder="Enter value for key_3000" onchange="updateDemand('key_3000')">
-    <input type="text" id="key_3500" placeholder="Enter value for key_3500" onchange="updateDemand('key_3500')">
-    <input type="text" id="key_4000" placeholder="Enter value for key_4000" onchange="updateDemand('key_4000')">
-    <input type="text" id="key_4500" placeholder="Enter value for key_4500" onchange="updateDemand('key_4500')">
-    <input type="text" id="key_5000" placeholder="Enter value for key_5000" onchange="updateDemand('key_5000')">
-    <input type="text" id="key_5500" placeholder="Enter value for key_5500" onchange="updateDemand('key_5500')">
-    <input type="text" id="key_6000" placeholder="Enter value for key_6000" onchange="updateDemand('key_6000')">
-    <input type="text" id="key_6500" placeholder="Enter value for key_6500" onchange="updateDemand('key_6500')">
-    <input type="text" id="key_7000" placeholder="Enter value for key_7000" onchange="updateDemand('key_7000')">
-    <button onclick="submitDemands()">Submit Data</button>
+    <h4>Enter Speed and Demand Values:</h4>
+    <div style="display: flex;">
+      <div style="margin-right: 10px;">
+      <h5> Demand Values </h5>
+        <input type="text" id="dp1" placeholder="Enter value for break point" onchange="updateDemand('1')">
+        <input type="text" id="dp2" placeholder="Enter value for break point" onchange="updateDemand('2')">
+        <input type="text" id="dp3" placeholder="Enter value for break point" onchange="updateDemand('3')">
+        <input type="text" id="dp4" placeholder="Enter value for break point" onchange="updateDemand('4')">
+        <input type="text" id="dp5" placeholder="Enter value for break point" onchange="updateDemand('5')">
+        <input type="text" id="dp6" placeholder="Enter value for break point" onchange="updateDemand('6')">
+        <input type="text" id="dp7" placeholder="Enter value for break point" onchange="updateDemand('7')">
+        <input type="text" id="dp8" placeholder="Enter value for break point" onchange="updateDemand('8')">
+        <input type="text" id="dp9" placeholder="Enter value for break point" onchange="updateDemand('9')">
+      </div>
+      <div>
+        <h5>Speed Values</h5>
+        <input type="text" id="sp1" placeholder="Enter speed value" onchange="updateSpeed('1')">
+        <input type="text" id="sp2" placeholder="Enter speed value" onchange="updateSpeed('2')">
+        <input type="text" id="sp3" placeholder="Enter speed value" onchange="updateSpeed('3')">
+        <input type="text" id="sp4" placeholder="Enter speed value" onchange="updateSpeed('4')">
+        <input type="text" id="sp5" placeholder="Enter speed value" onchange="updateSpeed('5')">
+        <input type="text" id="sp6" placeholder="Enter speed value" onchange="updateSpeed('6')">
+        <input type="text" id="sp7" placeholder="Enter speed value" onchange="updateSpeed('7')">
+        <input type="text" id="sp8" placeholder="Enter speed value" onchange="updateSpeed('8')">
+        <input type="text" id="sp9" placeholder="Enter speed value" onchange="updateSpeed('9')">
+      </div>
+    </div>
+    <button onclick="submitData()">Submit Data</button>
   </div>
   <script>
-    var injectionDemands = {
-      "key_3000": null,
-      "key_3500": null,
-      "key_4000": null,
-      "key_4500": null,
-      "key_5000": null,
-      "key_5500": null,
-      "key_6000": null,
-      "key_6500": null,
-      "key_7000": null,
+    // var injectionDemands = {
+    //   "dp1": 0,
+    //   "dp2": 0,
+    //   "dp3": 0,
+    //   "dp4": 0,
+    //   "dp5": 0,
+    //   "dp6": 0,
+    //   "dp7": 0,
+    //   "dp8": 0,
+    //   "dp9": 0,
+    // };
+
+    // var speedValues = {
+    //   "sp1": 0,
+    //   "sp2": 0,
+    //   "sp3": 0,
+    //   "sp4": 0,
+    //   "sp5": 0,
+    //   "sp6": 0,
+    //   "sp7": 0,
+    //   "sp8": 0,
+    //   "sp9": 0,
+    // };
+
+    var dataPoints = {
+      "breakpoint1": {speed: 0, demand: 0},
+      "breakpoint2": {speed: 0, demand: 0},
+      "breakpoint3": {speed: 0, demand: 0},
+      "breakpoint4": {speed: 0, demand: 0},
+      "breakpoint5": {speed: 0, demand: 0},
+      "breakpoint6": {speed: 0, demand: 0},
+      "breakpoint7": {speed: 0, demand: 0},
+      "breakpoint8": {speed: 0, demand: 0},
+      "breakpoint9": {speed: 0, demand: 0},
     };
 
     var numOutputs = 4;
 
-    function updateDemand(key){
-      console.log(key)
-      let value = document.getElementById(key).value;
-      console.log("The val: ", value)
+    function updateDemand(breakpoint){
+      let value = Number(document.getElementById("dp"+breakpoint).value);
       if (!Number.isInteger(Number(value))) {
         alert("Must be integer")
         return;
       }
-      injectionDemands[key] = Number(value)
-      console.log(injectionDemands)
+      //TODO: add check for less than 100
+      //TODO: add check for 0 or greater
+      dataPoints["breakpoint"+breakpoint].demand = value
     }
 
-    function submitDemands() {
-      console.log("User data to be sent to server: ", injectionDemands);
+
+    function updateSpeed(breakpoint){
+      let value = Number(document.getElementById("sp"+breakpoint).value);
+      if (!Number.isInteger(Number(value))) {
+        alert("Must be integer")
+        return;
+      }
+      //TODO: add check for less than 100
+      //TODO: add check for 0 or greater
+      dataPoints["breakpoint"+breakpoint].speed = value
+    }
+
+    function submitData() {
+      console.log("User data to be sent to server: ", dataPoints);
 
       let xhr = new XMLHttpRequest();
       xhr.open("POST", "/updateDemands", true);
@@ -174,7 +226,7 @@
         alert("Request failed.");
       };
 
-      xhr.send(JSON.stringify(injectionDemands));
+      xhr.send(JSON.stringify(dataPoints));
     }
 
     window.onload = function () {
